--- a/workflow/envs/webknossos.yml
+++ b/workflow/envs/webknossos.yml
@@ -11,3 +11,4 @@ dependencies:
       - pillow==10.4.0
       - scikit-image==0.24.0
       - dask==2024.8.1
+      - webknossos-utils@https://github.com/xfolka/webknossos_utils/archive/refs/heads/master.zip
