--- a/workflow/envs/webknossos.yml
+++ b/workflow/envs/webknossos.yml
@@ -4,6 +4,8 @@ channels:
 dependencies:
   - python=3.10.14
   - pip=24.2
+  - matplotlib
+  - python-dotenv
   - pip:
       - numpy==2.1.0
       - webknossos==0.15.2
