--- a/workflow/envs/yolov8.yml
+++ b/workflow/envs/yolov8.yml
@@ -6,5 +6,8 @@ dependencies:
   - python=3.12.5
   - pip=24.2
   - python-dotenv
+  - dask
+  - shapely
+  - scikit-image
   - pip:
       - ultralytics==8.2.82
